<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="74dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/arizonia"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/judul"
            android:textSize="60sp"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_box"
            android:gravity="center"
            android:hint="Enter Username"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColorHint="#A3FFFFFF"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_box"
            android:gravity="center"
            android:hint="Enter Password"
            android:inputType="numberPassword"
            android:padding="20dp"
            android:textColorHint="#A3FFFFFF"/>


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="sans-serif-black"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:background="@android:color/white" />

            <TextView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="Or"
                android:textSize="20dp"
                android:textColor="@color/white"/>

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:background="@android:color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/btnRegis"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="sans-serif-black"
            android:padding="10dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>
</RelativeLayout>